--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -13,4 +13,24 @@
         <item>10000</item>
     </string-array>
 
+    <string-array name="color_name">
+        <item>Yellow</item>
+        <item>Red</item>
+        <item>Green</item>
+    </string-array>
+
+    <string-array name="color_value">
+        <item>#FFC107</item>
+        <item>#FA2C2C</item>
+        <item>#4CAF50</item>
+    </string-array>
+
+    <string-array name="language_name">
+        <item>English</item>
+    </string-array>
+
+    <string-array name="language_value">
+        <item>English</item>
+    </string-array>
+
 </resources>
