--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    //Settings
+    <color name="blue">#2C59FA</color>
+    <color name="red">#FA2C2C</color>
+    <color name="green">#4CAF50</color>
+    <color name="yellow">#FFC107</color>
+
 </resources>
