# Location_Service (Service)

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -14,6 +14,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:clickable="true"
+        android:contentDescription="@string/myLocation"
         android:src="@drawable/ic_loc"
         app:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,6 +27,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:clickable="true"
+        android:contentDescription="@string/play_btn"
         android:src="@drawable/ic_play"
         app:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
@@ -51,7 +53,8 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:background="#CCFFFFFF"
-        android:padding="3dp"
+        android:backgroundTint="#4DFFFFFF"
+        android:padding="5dp"
         android:text="Time: 00:24:24"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
@@ -62,9 +65,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:background="#99FFFFFF"
-        android:padding="3dp"
+        android:layout_marginTop="5dp"
+        android:background="#4DFFFFFF"
+        android:padding="5dp"
         android:text="Average velosity: 3.5 km\h"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
@@ -75,9 +78,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:background="#CCFFFFFF"
-        android:padding="3dp"
+        android:backgroundTint="#4DFFFFFF"
+        android:padding="5dp"
         android:text="Velosity: 3.5km/h"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
@@ -88,9 +92,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:background="#99FFFFFF"
-        android:padding="3dp"
+        android:backgroundTint="#4DFFFFFF"
+        android:padding="5dp"
         android:text="Distance: 16.5 km"
         android:textColor="@color/black"
         android:textSize="24sp"
