#7 Data_Processing (Completed)

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -54,6 +54,7 @@
         android:layout_marginTop="10dp"
         android:background="#CCFFFFFF"
         android:backgroundTint="#4DFFFFFF"
+        android:fontFamily="@font/acme"
         android:padding="5dp"
         android:text="Time: 00:24:24"
         android:textColor="@color/black"
@@ -67,6 +68,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
         android:background="#4DFFFFFF"
+        android:fontFamily="@font/acme"
         android:padding="5dp"
         android:text="Average velosity: 3.5 km\h"
         android:textColor="@color/black"
@@ -81,6 +83,7 @@
         android:layout_marginTop="5dp"
         android:background="#CCFFFFFF"
         android:backgroundTint="#4DFFFFFF"
+        android:fontFamily="@font/acme"
         android:padding="5dp"
         android:text="Velosity: 3.5km/h"
         android:textColor="@color/black"
@@ -95,6 +98,7 @@
         android:layout_marginTop="5dp"
         android:background="#99FFFFFF"
         android:backgroundTint="#4DFFFFFF"
+        android:fontFamily="@font/acme"
         android:padding="5dp"
         android:text="Distance: 16.5 km"
         android:textColor="@color/black"
