--- a/app/src/main/res/layout/save_dialog.xml
+++ b/app/src/main/res/layout/save_dialog.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardCornerRadius="10dp">
@@ -16,7 +15,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:fontFamily="@font/acme"
-            android:text="Save this track?"
+            android:text="@string/save_this_track_dialog"
             android:textColor="@color/black"
             android:textSize="25sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -29,7 +28,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:fontFamily="@font/acme"
-            android:text="Time:"
+            android:text="@string/time_dialog"
             android:textColor="@color/blue"
             android:textSize="16sp"
             android:textStyle="bold"
@@ -43,7 +42,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:fontFamily="@font/acme"
-            android:text="Velocity:"
+            android:text="@string/velocity_dialog"
             android:textColor="@color/green"
             android:textSize="16sp"
             android:textStyle="bold"
@@ -57,7 +56,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:fontFamily="@font/acme"
-            android:text="Distance:"
+            android:text="@string/distance_dialog"
             android:textColor="@color/red"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -71,6 +70,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
+            android:layout_marginBottom="10dp"
             android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -78,24 +78,24 @@
             app:layout_constraintTop_toBottomOf="@+id/tvDistance_dialog"
             app:layout_constraintVertical_bias="0.0">
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/btnSave_dialog"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="5dp"
                 android:layout_weight="1"
                 android:backgroundTint="@color/blue"
-                android:text="Save"
+                android:text="@string/save_dialog_btn"
                 app:cornerRadius="10dp" />
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/btnCancel_dialog"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:layout_weight="1"
                 android:backgroundTint="@color/blue"
-                android:text="Cancel"
+                android:text="@string/cancel_dialog_btn"
                 app:cornerRadius="10dp" />
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
