--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -18,7 +18,8 @@
         android:src="@drawable/ic_loc"
         app:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:focusable="true" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fStartStop"
@@ -31,7 +32,8 @@
         android:src="@drawable/ic_play"
         app:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fCenter" />
+        app:layout_constraintTop_toBottomOf="@+id/fCenter"
+        android:focusable="true" />
 
     <org.osmdroid.views.MapView
         android:id="@+id/map"
@@ -56,7 +58,7 @@
         android:backgroundTint="#4DFFFFFF"
         android:fontFamily="@font/acme"
         android:padding="5dp"
-        android:text="Time: 00:24:24"
+        android:text="@string/time_00_24_24_fake"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -70,7 +72,7 @@
         android:background="#4DFFFFFF"
         android:fontFamily="@font/acme"
         android:padding="5dp"
-        android:text="Average velosity: 3.5 km\h"
+        android:text="@string/average_velosity_3_5_km_h_fake"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvTime" />
@@ -85,7 +87,7 @@
         android:backgroundTint="#4DFFFFFF"
         android:fontFamily="@font/acme"
         android:padding="5dp"
-        android:text="Velosity: 3.5km/h"
+        android:text="@string/velosity_3_5km_h_fake"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvAveragaVel" />
@@ -100,7 +102,7 @@
         android:backgroundTint="#4DFFFFFF"
         android:fontFamily="@font/acme"
         android:padding="5dp"
-        android:text="Distance: 16.5 km"
+        android:text="@string/distance_16_5_km_fake"
         android:textColor="@color/black"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
