--- a/app/src/main/res/layout/fragment_tracks.xml
+++ b/app/src/main/res/layout/fragment_tracks.xml
@@ -16,7 +16,7 @@
         android:layout_marginTop="356dp"
         android:layout_marginEnd="141dp"
         android:layout_marginBottom="356dp"
-        android:text="FRAGMENT TRACKS"
+        android:text="@string/fragment_tracks_fake"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
