--- a/app/src/main/res/layout/track_item.xml
+++ b/app/src/main/res/layout/track_item.xml
@@ -46,7 +46,7 @@
             app:srcCompat="@drawable/ic_speed" />
 
         <TextView
-            android:id="@+id/tvSpeed"
+            android:id="@+id/tvVelocity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
