--- a/app/src/main/res/layout/track_item.xml
+++ b/app/src/main/res/layout/track_item.xml
@@ -83,7 +83,7 @@
             app:layout_constraintTop_toTopOf="@+id/imageView2" />
 
         <ImageButton
-            android:id="@+id/imageButton"
+            android:id="@+id/imBtnDelete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
