--- a/app/src/main/res/layout/fragment_view_track.xml
+++ b/app/src/main/res/layout/fragment_view_track.xml
@@ -21,75 +21,97 @@
         android:id="@+id/fCenter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:alpha="0.7"
         android:clickable="true"
         android:contentDescription="@string/myLocation"
         android:focusable="true"
         android:src="@drawable/ic_loc"
-        app:backgroundTint="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:backgroundTint="@color/grey_dark"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-    <TextView
-        android:id="@+id/tvData"
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:background="#CCFFFFFF"
-        android:backgroundTint="#4DFFFFFF"
-        android:fontFamily="@font/acme"
-        android:padding="5dp"
-        android:text="Date: 02.03.2023"
-        android:textColor="@color/black"
-        android:textSize="16sp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:alpha="0.5"
+        app:cardCornerRadius="30dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/tvAveragaVel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:background="#4DFFFFFF"
-        android:fontFamily="@font/acme"
-        android:padding="5dp"
-        android:text="@string/average_velosity_3_5_km_h_fake"
-        android:textColor="@color/black"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvTime" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/grey_light"
+            android:padding="16dp">
 
-    <TextView
-        android:id="@+id/tvTime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:background="#CCFFFFFF"
-        android:backgroundTint="#4DFFFFFF"
-        android:fontFamily="@font/acme"
-        android:padding="5dp"
-        android:text="@string/time_00_24_24_fake"
-        android:textColor="@color/black"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvData" />
+            <TextView
+                android:id="@+id/tvData"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:background="#CCFFFFFF"
+                android:backgroundTint="#4DFFFFFF"
+                android:fontFamily="@font/acme"
+                android:padding="5dp"
+                android:text="Date: 02.03.2023"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/tvDistance"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:background="#99FFFFFF"
-        android:backgroundTint="#4DFFFFFF"
-        android:fontFamily="@font/acme"
-        android:padding="5dp"
-        android:text="@string/distance_16_5_km_fake"
-        android:textColor="@color/black"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvAveragaVel" />
+            <TextView
+                android:id="@+id/tvAveragaVel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:background="#4DFFFFFF"
+                android:fontFamily="@font/acme"
+                android:padding="5dp"
+                android:text="@string/average_velosity_3_5_km_h_fake"
+                android:textColor="@color/black"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvTime" />
+
+            <TextView
+                android:id="@+id/tvTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:background="#CCFFFFFF"
+                android:backgroundTint="#4DFFFFFF"
+                android:fontFamily="@font/acme"
+                android:padding="5dp"
+                android:text="@string/time_00_24_24_fake"
+                android:textColor="@color/black"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvData" />
+
+            <TextView
+                android:id="@+id/tvDistance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:background="#99FFFFFF"
+                android:backgroundTint="#4DFFFFFF"
+                android:fontFamily="@font/acme"
+                android:padding="5dp"
+                android:text="@string/distance_16_5_km_fake"
+                android:textColor="@color/black"
+                android:textSize="24sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvAveragaVel" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    </com.google.android.material.card.MaterialCardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
