--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,12 +15,10 @@
     <color name="yellow">#FFC107</color>
 
 
-    <color name="grey_dark">#9d9d9d</color>
-    <color name="grey_dark_strong">#414141</color>
-    <color name="grey_dark_middle">#747474</color>
-    <color name="grey_light">#dfdfdf</color>
+    <color name="grey_dark">#607D8B</color>
+    <color name="grey_dark_strong">#78909C</color>
+    <color name="grey_dark_middle">#B0BEC5</color>
+    <color name="grey_light">#ECEFF1</color>
 
-    <color name="blue_dark">#5674fd</color>
-    <color name="blue_light">#a3affe</color>
 
 </resources>
