--- a/app/src/main/res/layout/save_dialog.xml
+++ b/app/src/main/res/layout/save_dialog.xml
@@ -3,13 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/grey_light"
+    android:layout_margin="10dp"
+    android:background="@color/grey_dark_middle"
     app:cardCornerRadius="10dp"
     app:cardElevation="5dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/grey_dark_middle">
 
         <TextView
             android:id="@+id/tvTitle_dialog"
