--- a/app/src/main/res/layout/fragment_view_track.xml
+++ b/app/src/main/res/layout/fragment_view_track.xml
@@ -45,7 +45,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/grey_light"
+            android:background="@color/grey_dark_middle"
             android:padding="16dp">
 
             <TextView
