--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,10 +15,10 @@
     <color name="yellow">#FFC107</color>
 
 
-    <color name="grey_dark">#607D8B</color>
+    <color name="grey_dark">#455A64</color>
     <color name="grey_dark_strong">#78909C</color>
     <color name="grey_dark_middle">#B0BEC5</color>
-    <color name="grey_light">#ECEFF1</color>
+    <color name="grey_light">#CFD8DC</color>
 
 
 </resources>
