--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,6 +4,6 @@
         <item name="android:windowBackground">@android:color/transparent</item>
     </style>
     <style name="PreferenceTextStyle" parent="PreferenceThemeOverlay">
-        <item name="android:textColor">@color/grey_light</item>
+        <item name="android:textColor">@color/grey_dark</item>
     </style>
 </resources>
