--- a/app/src/main/res/color/color_tab.xml
+++ b/app/src/main/res/color/color_tab.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:color="@color/grey_dark_middle" android:state_selected="false"/>
-    <item android:color="@color/grey_light" android:state_selected="true"/>
+    <item android:color="@color/dark_main" android:state_selected="false"/>
+    <item android:color="@color/dark_color_tab_main" android:state_selected="true"/>
 
 </selector>
