--- a/app/src/main/res/layout/track_item.xml
+++ b/app/src/main/res/layout/track_item.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
     android:alpha="0.5"
-    android:backgroundTint="@color/grey_dark_middle"
+    android:backgroundTint="@color/white"
     app:cardCornerRadius="10dp"
     app:cardElevation="5dp">
 
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:background="@color/grey_dark_middle"
+        android:background="@color/white"
         android:padding="10dp">
 
         <TextView
@@ -25,7 +25,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:fontFamily="@font/acme"
-            android:text="02.03.2023 9:00"
+            android:text="@string/_02_03_2023_9_00"
             android:textColor="@color/grey_dark"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
             android:fontFamily="@font/acme"
-            android:text="6.7 km"
+            android:text="@string/_6_7_km"
             android:textColor="@color/grey_dark"
             android:textSize="30sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -50,7 +50,8 @@
             android:layout_marginTop="10dp"
             app:layout_constraintStart_toStartOf="@+id/tvDate"
             app:layout_constraintTop_toBottomOf="@+id/tvDate"
-            app:srcCompat="@drawable/ic_speed" />
+            app:srcCompat="@drawable/ic_speed"
+            android:contentDescription="@string/speed" />
 
         <TextView
             android:id="@+id/tvVelocity"
@@ -60,7 +61,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:fontFamily="@font/acme"
-            android:text="Speed: 3.4 km/h"
+            android:text="@string/speed_3_4_km_h"
             android:textColor="@color/grey_dark"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="@+id/imageView"
@@ -76,7 +77,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@+id/imageView"
             app:layout_constraintTop_toBottomOf="@+id/imageView"
-            app:srcCompat="@drawable/ic_timer" />
+            app:srcCompat="@drawable/ic_timer"
+            android:contentDescription="@string/timer_des" />
 
         <TextView
             android:id="@+id/tvTime"
@@ -86,7 +88,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:fontFamily="@font/acme"
-            android:text="Time: 00:23:43 m"
+            android:text="@string/time_00_00_00_m"
             android:textColor="@color/grey_dark"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="@+id/imageView2"
@@ -102,7 +104,7 @@
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
             android:background="@null"
-            android:contentDescription="delete"
+            android:contentDescription="@string/delete"
             app:layout_constraintBottom_toBottomOf="@+id/tvTime"
             app:layout_constraintEnd_toEndOf="@+id/tvDistance"
             app:layout_constraintStart_toStartOf="@+id/tvDistance"
