--- a/app/src/main/res/layout/fragment_view_track.xml
+++ b/app/src/main/res/layout/fragment_view_track.xml
@@ -58,7 +58,7 @@
                 android:backgroundTint="#4DFFFFFF"
                 android:fontFamily="@font/acme"
                 android:padding="5dp"
-                android:text="@string/date_02_03_2023"
+                android:text="@string/fvt_date"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -73,7 +73,7 @@
                 android:background="#4DFFFFFF"
                 android:fontFamily="@font/acme"
                 android:padding="5dp"
-                android:text="@string/average_velosity_3_5_km_h_fake"
+                android:text="@string/fvt_average_velosity"
                 android:textColor="@color/black"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvTime" />
@@ -88,7 +88,7 @@
                 android:backgroundTint="#4DFFFFFF"
                 android:fontFamily="@font/acme"
                 android:padding="5dp"
-                android:text="@string/time_00_24_24_fake"
+                android:text="@string/fvt_time"
                 android:textColor="@color/black"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvData" />
@@ -103,7 +103,7 @@
                 android:backgroundTint="#4DFFFFFF"
                 android:fontFamily="@font/acme"
                 android:padding="5dp"
-                android:text="@string/distance_16_5_km_fake"
+                android:text="@string/fvt_distance"
                 android:textColor="@color/black"
                 android:textSize="24sp"
                 app:layout_constraintStart_toStartOf="parent"
