--- a/app/src/main/res/layout/track_item.xml
+++ b/app/src/main/res/layout/track_item.xml
@@ -25,7 +25,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:fontFamily="@font/acme"
-            android:text="@string/_02_03_2023_9_00"
+            android:text="@string/ti_date"
             android:textColor="@color/grey_dark"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
             android:fontFamily="@font/acme"
-            android:text="@string/_6_7_km"
+            android:text="@string/ti_distance"
             android:textColor="@color/grey_dark"
             android:textSize="30sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -61,7 +61,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:fontFamily="@font/acme"
-            android:text="@string/speed_3_4_km_h"
+            android:text="@string/ti_speed"
             android:textColor="@color/grey_dark"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="@+id/imageView"
@@ -88,7 +88,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:fontFamily="@font/acme"
-            android:text="@string/time_00_00_00_m"
+            android:text="@string/ti_time"
             android:textColor="@color/grey_dark"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="@+id/imageView2"
