Fix bug - Toast

--- a/app/src/main/res/layout/fragment_tracks.xml
+++ b/app/src/main/res/layout/fragment_tracks.xml
@@ -24,7 +24,7 @@
         android:layout_marginTop="356dp"
         android:layout_marginEnd="141dp"
         android:layout_marginBottom="356dp"
-        android:text="@string/empty"
+        android:text="@string/ft_txt_emty"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
